# introduction-to-ai

./: .gitignore
FP-dataset-generator/: .env  .gitignore  ONBOARDING.md  README.md  main.py  pyproject.toml  run_project.sh  test_organizer.py  test_processor.py
FP-dataset-generator/data/processed/orange_cats_dataset/: README.md  dataset_info.json
FP-dataset-generator/src/: ai_agent.py  pipeline.py
FP-dataset-generator/src/downloaders/: openverse_downloader.py
FP-dataset-generator/src/exporters/: metadata_generator.py
FP-dataset-generator/src/organizers/: dataset_organizer.py
FP-dataset-generator/src/processors/: image_processor.py
FP-dataset-generator/test-scripts/: test_download.py  test_metadata.py
FP-dataset-generator/webcrawler-source/: crawler.go  downloader.go  go.mod  go.sum  main.go  utils.go
P1-simple-linear-regression/: simple-linear-regresion-sk-learn.py
P2-Perceptron-gates-implementation/: Graphics-perceptron-logic-gates.ipynb  Perceptron_logic_gates.ipynb
P3-functions-aproximations/: p3_aproximadores_universales-2.ipynb
P5-classifier-convolutional-nn/: p5_emnist_pytorch.ipynb  p5_emnist_pytorch.py
perceptron-for-logic-gates/: perceptron-for-logic-gates.ipynb  perceptron-for-logic-gates.py
simple-linear-regression/: README.md  employee-performance.ipynb  employee-performance.py  salario-experiencia.ipynb  salario-experiencia.py
tabular-nn-binary-classification/: tabular-neural-network-binary-classfier.ipynb  tabular-neural-network-binary-classfier.py
